syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.syshco.grpc.gen";

message HelloRequest {
  string name = 1;
}

message HelloResponse{
  string name = 1;
}

service HelloService {
  rpc sayHello(HelloRequest) returns (HelloResponse);
}